--- a/Backend/HAD_Backend/src/main/resources/application.properties
+++ b/Backend/HAD_Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/kavachdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Sr@16031996
+spring.datasource.password=Samarpita1@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
