--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
-    "@mui/styles": "^5.15.14",
+    "@mui/styles": "^5.15.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +20,9 @@
     "crypto-js": "^4.2.0",
     "dicom-parser": "^1.8.21",
     "dwv": "^0.32.4",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-cornerstone-viewport": "^4.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
