--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "dicom-parser": "^1.8.21",
     "dwv": "^0.32.4",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-cornerstone-viewport": "^4.1.5",
     "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
