--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -6,8 +6,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.15",
     "@mui/styles": "^5.15.14",
+    "@mui/system": "^5.15.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "crypto-js": "^4.2.0",
     "dicom-parser": "^1.8.21",
     "dwv": "^0.32.4",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-cornerstone-viewport": "^4.1.5",
     "react-dom": "^18.2.0",
@@ -27,6 +29,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
+    "use-react-screenshot": "^4.0.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
