--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -23,6 +23,7 @@
     "dwv": "^0.32.4",
     "firebase": "^10.10.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-cornerstone-viewport": "^4.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
