--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
+    "use-react-screenshot": "^4.0.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
