--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "dicom-parser": "^1.8.21",
     "dwv": "^0.32.4",
+    "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
