--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -22,6 +22,7 @@
     "dwv": "^0.32.4",
     "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-cornerstone-viewport": "^4.1.5",
